wdl-analysis/tests/validation/import-namespace-invalid/source.errors
error: failed to import `invalid-namespace.wdl`: No such file or directory (os error 2)
  ┌─ tests/validation/import-namespace-invalid/source.wdl:5:8
  │
5 │ import "invalid-namespace.wdl"
  │        ^^^^^^^^^^^^^^^^^^^^^^^

error: import namespace is not a valid WDL identifier
  ┌─ tests/validation/import-namespace-invalid/source.wdl:5:8
  │
5 │ import "invalid-namespace.wdl"
  │        ^^^^^^^^^^^^^^^^^^^^^^^ a namespace cannot be derived from this import path
  │
  = fix: add an `as` clause to the import to specify a namespace

